--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,11 @@
             <version>1.1.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
